fixed shifting mobile view, added better font, changed roll history styling, added dirty empty p fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   margin-top: 30px;
   border-radius: 2px;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 20px;
+  padding-bottom: 20px;
 }
 
 @media screen and (min-width:300px) and (max-width:1000px) {
